--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "mapbox-gl": "^0.53.1",
     "vue": "^2.6.6"
   },
   "devDependencies": {
